manifests/ingress.yaml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: blog
    labels:
      app: blog
  spec:
    rules:
    - host: blog.127labs.com
      http:
        paths:
        - backend:
            serviceName: blog
            servicePort: 80
          path: /
